# kairos

./: .claude-project.md  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
contracts/: schema.yaml
contracts/repos/: compute.yaml  littleguy.yaml  manifests.yaml  vpc.yaml
contracts/templates/: contract-template.yaml
docs/: PRD.md  architecture.md  configuration.md  contracts-guide.md  lessons-from-automated-estimator.md  quickstart.md
docs/notebook/: 2026-03-29-contract-initialization-and-slants.md
kairos/: aggregate.py  chunker.py  cli.py  embed.py  install.py  models.py  schema.py  server.py  staleness.py
tests/: test_aggregate.py  test_chunker.py  test_cli_e2e.py  test_embed.py  test_install.py  test_schema.py  test_server.py  test_server_lifespan.py  test_server_staleness.py  test_smoke.py  test_staleness.py
tests/fixtures/aggregate-contracts/: agg-repo-a.yaml  agg-repo-b.yaml  agg-repo-c.yaml
tests/fixtures/sample-contracts/: invalid-bad-archetype.yaml  invalid-missing-identity.yaml  valid-compute.yaml  valid-extra-fields.yaml  valid-minimal.yaml  valid-vpc.yaml
